--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,14 @@
   "permissions": [
     "activeTab",
     "https://ajax.googleapis.com/",
-    "geolocation"
-  ]
+    "geolocation",
+    "identity",
+    "identity.email"
+  ],
+  "oauth2": {
+        "client_id": "107956224335314164398",
+        "scopes": [
+            "https://www.googleapis.com/auth/userinfo.email"
+        ]   
+    }  
 }
