--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "anchorme": "^1.1.2",
+    "compromise": "^10.3.0",
     "core-js": "^2.4.1",
     "jump.js": "^1.0.2",
     "rxjs": "^5.1.0",
