--- a/manifest.json
+++ b/manifest.json
@@ -2,27 +2,27 @@
   "manifest_version": 2,
   "name": "What I Learned",
   "version": "1.0",
-  "description": "What I learned extension",
+  "description": "A simple new tab extension, keeping track of what you learn each day. Used to track links, ideas, and thoughts.",
 
   "browser_action": {
-    "default_icon": "icon.png"
+    "default_icon": "wil64.png"
   },
 
-    "chrome_url_overrides": {
-      "newtab": "index.html"
-    },
+  "icons": { 
+    "64": "wil64.png",
+    "256": "wil256.png"
+  },
+
+  "chrome_url_overrides": {
+    "newtab": "index.html"
+  },
+
+   "background": {
+    "scripts": ["background.js"]
+  },
 
   "permissions": [
     "activeTab",
-    "https://ajax.googleapis.com/",
-    "geolocation",
-    "identity",
-    "identity.email"
-  ],
-  "oauth2": {
-        "client_id": "107956224335314164398",
-        "scopes": [
-            "https://www.googleapis.com/auth/userinfo.email"
-        ]   
-    }  
+    "geolocation"
+  ]
 }
